--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -317,3 +317,147 @@ G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\cd2021&gt;git push gitl
 <p></p>
 <h2>week15</h2>
 <p></p>
+<h3>part 1-joint</h3>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/IKOGwoJ2HLk" title="YouTube video player" width="560"></iframe></p>
+<p>We saw this simple two-link robot in the previous lecture about forward kinematics.</p>
+<p></p>
+<p>The tooltip pose of this robot is discribed simply by two number ,the coordinates x and y with</p>
+<p>respect to the world coordinate frame.</p>
+<p></p>
+<p>So, the problem here is that given x and y, we want to determine the joined angles, Q1 and</p>
+<p>Q2.  </p>
+<p></p>
+<p>The solution that we're going to follow in this particular section is a geometric</p>
+<p></p>
+<p>ONE. We're going to start with a simple piece of construction.</p>
+<p></p>
+<p><span>We're going to overlay the red triangle on top of our robot.</span></p>
+<p><span></span></p>
+<p><span>We know that the end point coordinate is x, y, so the vertical height of the triangle is y,horizontal width is x.</span></p>
+<p><span></span></p>
+<p><span>And, using Pythagoras theorem, we can write thagoras r squared equals x squared plus y squared.</span></p>
+<p><span></span></p>
+<p><span>So far.so easy. Now, we're going to look at this triangle highlighted here in red and we want to determine the angle alpha.</span></p>
+<p><span></span></p>
+<p><span>In order to do that, we need to use the cosine rule.</span></p>
+<p><span></span></p>
+<p><span>And, if you're a little rusty on the cosine rule, here is a bit of a refresher.</span></p>
+<p><span></span></p>
+<p><span>We have an arbitrary triangle.</span></p>
+<p></p>
+<p><span>We don't have to have any right angles in it and we're going to label the length of this edge as A and the angle opposite that edge, we're going to label as little a.</span></p>
+<p><span></span></p>
+<p><span>And, we do the same for this edge and this angle, and this edge and this angle.</span></p>
+<p><span></span></p>
+<p><span>So, all together, the sides are labelled capitals A, B and C, and the angles are labelled little a, little b, and little c.</span></p>
+<p><span></span></p>
+<p><span>So, the cosine rule is simply this relationship here.</span></p>
+<p><span></span></p>
+<p><span>It's a bit like Pythagoras' theorem except for this extra term on the end with the cos a in it.</span></p>
+<p><span></span></p>
+<p><span>Now, let's apply the cosine rule to the particular triangle we looked at a moment rul ago.</span></p>
+<p><span></span></p>
+<p><span>It's pretty straightforward to write down this particular relationship.</span></p>
+<p><span></span></p>
+<p><span>We can isolate the term cos alpha which gives us the angle alpha that we're interested in.</span></p>
+<p><span></span></p>
+<p><span>And, it's defined in terms of the constant link lengths, A1 and A2 and the position of the end effector,x and y.</span></p>
+<p><span></span></p>
+<p><span>We can write this simple relationship between the angles alpha and Q2.</span></p>
+<p><span></span></p>
+<p><span>And, we know from the shape of the cosine function that cos of Q2 must be equal to negative of cos alpha.</span></p>
+<p><span></span></p>
+<p><span>This time, let's just write an expression for the cosine of the joined angle Q2.</span></p>
+<p><span></span></p>
+<p><span>Now, we're going to draw yet another red triangle and we're going apply some simple trigonometry here.</span></p>
+<p><span></span></p>
+<p><span>If we know Q2, then we know this length and this length of the red triangle.</span></p>
+<p><span></span></p>
+<p><span>We can write this relationship for the sine of the joined angle Q2.</span></p>
+<p><span></span></p>
+<p><span>Now, we can consider this bigger triangle whose angle is beta and this side length of the triangle is given here in blue.</span></p>
+<p><span></span></p>
+<p><span>And, the length of the other side of the triangle is this.</span></p>
+<p><span></span></p>
+<p><span>So, now we can write an expression for the angle beta in terms of these parameters here.</span></p>
+<p><span></span></p>
+<p><span>Going back to the red triangle that we drew earlier, we can establish a relationship between Q1 and the angle beta.</span></p>
+<p><span></span></p>
+<p><span>Introduce yet another angle, this one gamma and we can write a relationship between the angle gamma and the tooltip coordinates x and y.</span></p>
+<p><span></span></p>
+<p><span>Now, we can write a simple relationship between the angles that we've constructed, gamma and beta and the joined angle we're interested in which is Q1.</span></p>
+<p><span></span></p>
+<p><span>And, the total relationship looks something like this.</span></p>
+<p><span></span></p>
+<p><span>Quite a complex relationship, it gives us the angle of joined one, that's Q1 in terms of the end effector coordinates y and x, and a bunch of constants, a1 and a2, and it's also a function of the second joint angle, Q2.</span></p>
+<p><span></span></p>
+<p><span>So, let's summarize what it is that we have derived here.1</span></p>
+<p><span></span></p>
+<p><span>We have an expression for the cosine of Q2 and we have an expression for Q1.</span></p>
+<p><span></span></p>
+<p><span>Now, the cosine function is symmetrical about 0.</span></p>
+<p><span></span></p>
+<p><span>So, if we know the value of the cosine of Q2, then there are two possible solutions, a positive angle and a negative angle</span></p>
+<p><span></span></p>
+<p><span>We're going to explicitly choose the positive angle, which means that I can write this expression here.</span></p>
+<p><span></span></p>
+<p><span>And now, we have what we call the inverse kinematic solution for this two-link robot.</span></p>
+<p><span></span></p>
+<p><span>We have an expression for the two joined angles, Q1 and Q2 in terms of the end effector pose x and y, and a bunch of constants.</span></p>
+<p><span></span></p>
+<p><span>You notice that the two equations are not independent.</span></p>
+<p><span></span></p>
+<p><span>The equation for Q1, in fact, depends on the solution for Q2.</span></p>
+<p><span></span></p>
+<p><span>In this case, Q2 is negative and we're going to write the solution for Q2 with a negative sign in front of the inverse cosine.</span></p>
+<p><span></span></p>
+<p><span>Now, we need to solve for Q1, so we're going to introduce this particular red triangle, the angle beta that we solved previously, and the angle gamma which is defined in terms of y and x.</span></p>
+<p><span></span></p>
+<p><span>Now, we write a slightly different relationship between q1, gamma and beta, different to what we had before.</span></p>
+<p><span></span></p>
+<p><span>There’s a change of sign involved.</span></p>
+<p><span></span></p>
+<p><span>Then, we can substitute all that previous equation and come up with this expression for q1.</span></p>
+<p><span></span></p>
+<p><span>Again, there is a change of sign here.</span></p>
+<p><span></span></p>
+<p><span>Previously, this was a negative sign.</span></p>
+<p><span></span></p>
+<p><span>And, here in summary form is the solution for the inverse kinematics of our two-link robot when it is in this particular configuration, where q2 is negative.</span></p>
+<p><span></span></p>
+<p><span>Let’s compare the two solutions, the case where q2 is positive and the case where q2 is negative.</span></p>
+<p><span></span></p>
+<h3>part 2-joint</h3>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/eIZuz1XCd0w" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p><span>Here we have the same two link robot as we just looked at but this time we're going tosolve it using an analytical approach , that is we're going to rely much more on algebra ,particular linear algebra rather than geometry .</span></p>
+<p><span></span></p>
+<p><span>We have an expression E , which is the homogeneous transformation which represents the pose of the robots endefector and we looked at this in the last lecture , we can write the endefector pose as a sequence of elementary homogeneous transformations .</span></p>
+<p><span></span></p>
+<p><span>A rotation by Q1 , a translation along the X direction by A1 , a rotation by Q2 and then a translation in the X direction by A2 .</span></p>
+<p><span></span></p>
+<p><span>If I expand this out , multiply all the transformations together , I get the expression shown here ; a three by three homogeneous transformation matrix representing the pose of the robot's endefector.</span></p>
+<p><span></span></p>
+<p><span>Now for this particular two link robot , we are only interested in the position of its endefector , it's X and Y co - ordinate and they are these two elements within the homogeneous transformation matrix , so I'm going to copy those out .</span></p>
+<p><span></span></p>
+<p><span>So here again is our expression for X and Y and what we're going to do is a fairly common trick , we're going to square and add these two equations and I get a relationship that looks like this .</span></p>
+<p><span></span></p>
+<p><span>Now I can solve for the joint angle Q2 in terms of the endefector pose X and Y and the robot's constants A1 and A2.</span></p>
+<p><span></span></p>
+<p><span>Now what I'm going to do is apply the sum of angles identity .</span></p>
+<p><span></span></p>
+<p><span>I'm going to expand these terms, sine of Q1 plus Q2 or cos of Q1 plus Q2 and to make life a little bit easier, I'm going to make some substations, so where ever I had cos Q2, I'm going to write C2 and where ever I had sine Q2, I'm going to write S2.</span></p>
+<p><span></span></p>
+<p><span>It's a fairly common shorthand when people are looking at robot kinematic equations.</span></p>
+<p><span></span></p>
+<p><span>And here are the equations after making those substitutions.</span></p>
+<p><span></span></p>
+<p><span>Looking at these two equations, I can see that they fall into a very well known form and for that form there is a very well known solution.</span></p>
+<p><span></span></p>
+<p><span>So I'm going to consider just one of the equations, the equation for Y and using our well known identity and it's solution, I can determine the values for the variables little a, little b and little c and once l've determined those, then I can just write down the solution for Q1, which x is the equivalent of theta in this particular case.</span></p>
+<p><span></span></p>
+<p><span>Here again is our expression for Q1, copied over from the previous slide and we may remember from earlier in our workings that we determined this particular relationship; X squared plus Y squared is equal to this particular complex expression.</span></p>
+<p><span></span></p>
+<p><span>So I can substitute that in and do some simplification and I end up with this slightly less complex expression for Q1.</span></p>
+<p><span></span></p>
+<p><span>And it is the same expression that I got following the geometric approach in the previous section.</span></p>
